--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn install
+      - mvn clean install
       - mv target/ROOT-1.war ROOT.war
            
   post_build:
